Silly, but possibly better, fix for big box ad on iPhone portrait

--- a/ui/less/styles.less
+++ b/ui/less/styles.less
@@ -372,16 +372,23 @@ form#riding-search-mobile {
     body#front .info { display: none; }
 }
 
+
+// Responsive: Up to portrait phone
+// --------------------------------------------------
+@media (max-width : 320px) {
+    #google_ads_div_ElectionGuideBigBox_ad_wrapper {
+        position: relative;
+        left: -10px;
+    }
+}
+
+
 // Responsive: Up to landscape phone
 // --------------------------------------------------
 @media (max-width: 480px) {
      header {
         background: url('../img/tyee-logo.png') rgba(255,255,255,0.4) no-repeat center 10px;
     }
-    #big-box {
-        overflow: hidden;
-    }
-
 }
 
 // Responsive: Small tablets
